<resources>
    <string name="app_name">Facturi</string>
    <string name="feedback">Feedback</string>
    <string name="log_in">Log In</string>
    <string name="facturi">Facturi</string>
    <string name="adauga_factura">Adauga factura</string>
    <string name="istoric">Istoric</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="feddback">Feddback</string>
    <string name="send">Send</string>
    <string name="furnizor">Furnizor</string>
    <string name="valoare">Valoare</string>
    <string name="save">Save</string>
    <string name="select_date">Select Date</string>
    <string name="reg">Reg</string>
    <string name="lista_facturi">Lista facturi</string>
    <string name="GiveUsAfeedback">Feedback</string>
    <string name="Logheaza">LogIn</string>
    <string name="adauga">Adauga</string>
    <string name="history">Istoric</string>
    <string name="what_do_you_think_about_our_app">What do you think about our app?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="platita">Platita</string>
    <string name="change_status">Change Status</string>
    <string name="Facturi">Facturi</string>
    <string name="istoric_facturi">Istoric Facturi</string>
    <string name="informatii_furnizori">Informatii furnizori</string>
    <string name="furnizori">Furnizori</string>
    <string name="contact_furnizori">Contact furnizori</string>
    <string name="email_login">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_reg">Email</string>
    <string name="id_user">Id User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="email_feedback">email_feedback</string>
    <string name="emailFeedback">email</string>
    <string name="title_activity_maps_furnizori">Map</string>
    <string name="arata_harta">Arata harta</string>
    <string name="statistica">Statistica</string>
    <string name="istoric_feedback">Istoric feedback</string>
    <string name="feedback_urile_aplicatiei">Feedback-urile aplicatiei</string>
    <string name="istoric_feedback_2">Istoric feedback</string>
    <string name="parola">Parola</string>
    <string name="nu_esti_inregistrat">Nu esti inregistrat?</string>
    <string name="inregistreaza_te">Inregistreaza-te!</string>
    <string name="nume">Nume</string>
    <string name="prenume">Prenume</string>
    <string name="parolaR">Parola</string>
    <string name="inregistrare">Inregistrare</string>
    <string name="ai_deja_cont">Ai deja cont?</string>
    <string name="conecteaza_te">Conecteaza-te!</string>
    <string name="conectare">Conectare</string>
    <string name="ce_parere_ai_despre_aplicatia_noastra">Ce parere ai despre aplicatia noastra?</string>
    <string name="trimite">Trimite</string>
    <string name="mesajTrimis">Mesajul tau a fost trimis!</string>
    <string name="intraInCont">Intra in cont</string>
    <string name="trebuieSaTeInregistrezi">Trebuie sa te inregistrezi</string>
    <string name="completeazaToateCampurile">Trebuie sa completezi toate campurile</string>
    <string name="TitluInregistrare">Inregistrare</string>
    <string name="EvidentaFcaturiDeAchitat">Evidenta Facturi de Achitat</string>
    <string name="selecteazaData">Selecteaza Data</string>
    <string name="graficul_valorilor_facturilor">Graficul valorilor facturilor</string>
    <string name="StatisticaValorilorFacturilor">Statistica valorilor facturilor</string>
    <string name="trebuieCompletatTot">Trebuie sa completezi toate campurile!</string>
    <string name="detaliiFurnizori">Detalii contact furnizori</string>
    <string name="apaNova">APA NOVA</string>
    <string name="iqApa">IQ APA</string>
    <string name="engieOne">ENGIE ONE</string>
    <string name="distrigazSud">DISTRIGAZ SUD</string>
    <string name="electrica">ELECTRICA</string>
    <string name="enel">ENEL</string>
    <string name="radet">RADET</string>
    <string name="istoricFeedback">Istoric Feedback</string>
    <string name="facturi_cu_volori_peste_150_lei">Facturi cu volori peste 150 lei</string>
    <string name="facturile_lunii_curente">Facturile lunii curente</string>
    <string name="facturi_peste_150_lei">Facturi peste 150 lei</string>
    <string name="listaFacturi">Lista Facturi</string>
    <string name="facturileLuniiCurente">Facturile lunii curente</string>
    <string name="facturiPeste150">Facturi cu valoarea peste 150 lei</string>
    <string name="facturi_cu_valoarea_mai_mare_de_150_lei">Facturi cu valoarea mai mare de 150 lei</string>
    <string name="facturi_scadente_in_luna_curenta">Facturi scadente in luna curenta</string>
    <string name="facturi_cu_valoarea_mai_mare_de_300_lei">Facturi cu valoarea mai mare de 300 lei</string>
    <string name="facturiRestante">Facturi restate</string>
    <string name="facturi_restante">Facturi restante</string>
    <string name="facturi_restante2">Facturi restante</string>
    <string name="facturi_neplatite2">Facturi neplatite</string>
    <string name="adaugaFac">Adauga Factura</string>
    <string name="facNeplat">Facturi neplatite</string>
    <string name="facturi300lei">Facturi peste 300 lei</string>
    <string name="feedbackTitle1">Feedback</string>
</resources>
