<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adauga"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:hint="@string/furnizor"
        android:id="@+id/ET_furnizor"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/valoare"
        android:id="@+id/ET_valoare"/>

    <TextView
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:hint="@string/selecteazaData"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:id="@+id/TW_select"/>

    <CheckBox
        android:id="@+id/CBFactura"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:checked="false"
        android:text="@string/platita"
        android:layout_marginTop="10dp"
        android:textSize="13dp"
        android:buttonTint="@color/color"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/ok"
        android:id="@+id/BtnIdOK"
        android:layout_marginTop="50dp"
        android:background="@color/design_default_color_surface"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:id="@+id/BtnIdCancel"
        android:onClick="cancelOperatiune"
        android:layout_marginTop="50dp"
        android:background="@color/design_default_color_surface"
        android:paddingLeft="20dp"/>
    </LinearLayout>



</LinearLayout>