<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/ce_parere_ai_despre_aplicatia_noastra"
        android:textSize="20dp"
        android:textStyle="italic|bold"
        android:textColor="@color/color"/>


    <EditText
        android:id="@+id/ET_name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:drawableLeft="@drawable/ic_login"
        android:hint="@string/emailFeedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ET_feedback"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/RB_stars"
        android:numStars="5"
        android:progressTint="@color/color"
        android:stepSize="0.5"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/BTN_send"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/trimite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cardview_light_background"/>

    <TextView
        android:id="@+id/TW_isFeed"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:paddingLeft="100dp"
        android:layout_marginLeft="60dp"
        android:paddingBottom="7dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="@string/istoric_feedback_2"
        android:textColor="@color/color"/>


</LinearLayout>